After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 686168 - shell-search-provider crashes every time
shell-search-provider crashes every time
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Crashers
3.6.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 687117 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-10-15 15:21 UTC by Mantas Mikulėnas (grawity)
Modified: 2012-11-12 21:55 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Mantas Mikulėnas (grawity) 2012-10-15 15:21:10 UTC
Whenever I search for something in GNOME Shell's overview, then leave it, nautilus-shell-search-provider crashes after a second or so. Quite annoying.

<backtrace>
Program terminated with signal 11, Segmentation fault.
  • #0 g_cancellable_is_cancelled
    at gcancellable.c line 296
  • #1 complete_in_idle_cb_for_thread
    at gsimpleasyncresult.c line 837
  • #2 g_idle_dispatch
    at gmain.c line 4806
  • #3 g_main_dispatch
    at gmain.c line 2715
  • #4 g_main_context_dispatch
    at gmain.c line 3219
  • #5 g_main_context_iterate
    at gmain.c line 3290
  • #6 g_main_context_iteration
    at gmain.c line 3351
  • #7 g_application_run
    at gapplication.c line 1620
  • #8 main
    at nautilus-shell-search-provider.c line 854

gnome-shell 3.6.0
nautilus 3.6.0 (even today's 3.6.0-git-7666f83)
Comment 1 Cosimo Cecchi 2012-10-15 22:21:40 UTC
I can't reproduce this here...can you please try the following:
- update Nautilus to 3.6.1 - a number of bug fixes went into search and the shell provider since 3.6.0
- launch the shell provider manually from a terminal under gdb - please use this command line: G_DEBUG=fatal_warnings G_MESSAGES_DEBUG=all NAUTILUS_SEARCH_PROVIDER_PERSIST=1 gdb /usr/libexec/nautilus-shell-search-provider
- search from the shell as you normally would

When/if the provider crashes or emits a warning, gdb will catch it and you can obtain a backtrace from there.
Comment 2 Cosimo Cecchi 2012-10-18 19:11:56 UTC
I actually managed to reproduce this, and pushed another series of fixes to git (both master and gnome-3-6 branches) - it should work fine now.
Please reopen if you can reproduce with master or gnome-3-6 from git.
Comment 3 Mantas Mikulėnas (grawity) 2012-10-18 19:40:22 UTC
I actually couldn't reproduce it for some time after posting this report. But the latest git master crashed a few times with the following backtrace:

  • #0 search_hits_added_cb
    at nautilus-shell-search-provider.c line 187
  • #1 g_closure_invoke
    from /usr/lib/libgobject-2.0.so.0
  • #2 ??
    from /usr/lib/libgobject-2.0.so.0
  • #3 g_signal_emit_valist
    from /usr/lib/libgobject-2.0.so.0
  • #4 g_signal_emit
    from /usr/lib/libgobject-2.0.so.0
  • #5 nautilus_search_provider_hits_added
    at nautilus-search-provider.c line 137
  • #6 search_provider_hits_added
    at nautilus-search-engine.c line 173
  • #7 g_closure_invoke
    from /usr/lib/libgobject-2.0.so.0
  • #8 ??
    from /usr/lib/libgobject-2.0.so.0
  • #9 g_signal_emit_valist
    from /usr/lib/libgobject-2.0.so.0
  • #10 g_signal_emit
    from /usr/lib/libgobject-2.0.so.0
  • #11 nautilus_search_provider_hits_added
    at nautilus-search-provider.c line 137
  • #12 search_thread_add_hits_idle
    at nautilus-search-engine-simple.c line 165
  • #13 g_main_context_dispatch
    from /usr/lib/libglib-2.0.so.0
  • #14 ??
    from /usr/lib/libglib-2.0.so.0
  • #15 g_main_context_iteration
    from /usr/lib/libglib-2.0.so.0
  • #16 g_application_run
    from /usr/lib/libgio-2.0.so.0
  • #17 main
    at nautilus-shell-search-provider.c line 854

Comment 4 Cosimo Cecchi 2012-10-18 21:34:16 UTC
Thanks for testing again; turns out that crash you're seeing now is another unrelated issue, for which I just pushed another fix to git.
Comment 5 Cosimo Cecchi 2012-11-12 21:55:06 UTC
*** Bug 687117 has been marked as a duplicate of this bug. ***