search-engine-tracker: refactor search completion notification

Keep a ref to the engine while the async search is in progress. This is
what all the other engines do, and not doing it causes problems when
cancelling the operation.

While we're at it, also refactor the completion notification code in a
single function.

https://bugzilla.gnome.org/show_bug.cgi?id=686168